Replaced DSharpPlus with Discord.Net. Started work on web portal.

--- a/Newsblast.Web/Newsblast.Web.csproj
+++ b/Newsblast.Web/Newsblast.Web.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <Authors>Jonathan Potts</Authors>
     <Company>Jonathan Potts</Company>
+    <UserSecretsId>0e0c364c-2fdd-4d6c-b6ab-1f9d66dea9b1</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -11,7 +12,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Discord.Net" Version="1.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.2" />
   </ItemGroup>
 
   <ItemGroup>
