--- a/Newsblast.Server/Newsblast.Server.csproj
+++ b/Newsblast.Server/Newsblast.Server.csproj
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="3.2.3" />
+    <PackageReference Include="Discord.Net" Version="1.0.2" />
     <PackageReference Include="HtmlAgilityPack" Version="1.6.16" />
     <PackageReference Include="Microsoft.SyndicationFeed.ReaderWriter" Version="1.0.2" />
   </ItemGroup>
