Started web portal refinement.

--- a/Newsblast.Web/Newsblast.Web.csproj
+++ b/Newsblast.Web/Newsblast.Web.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\Newsblast.Shared\Newsblast.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\css\" />
+  </ItemGroup>
+
 </Project>
