--- a/Newsblast.Server/Newsblast.Server.csproj
+++ b/Newsblast.Server/Newsblast.Server.csproj
@@ -18,7 +18,9 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.0.0-beta" />
-    <PackageReference Include="HtmlAgilityPack" Version="1.6.16" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.6.17" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0" />
     <PackageReference Include="Microsoft.SyndicationFeed.ReaderWriter" Version="1.0.2" />
   </ItemGroup>
 
