Update npm packages

--- a/Newsblast.Web/package.json
+++ b/Newsblast.Web/package.json
@@ -3,12 +3,10 @@
   "name": "asp.net",
   "private": true,
   "devDependencies": {
-    "gulp": "4.0.0",
-    "gulp-sass": "4.0.2",
-    "gulp-cssmin": "0.2.0",
-    "gulp-concat": "2.6.1",
-    "gulp-rename": "1.4.0",
-    "del": "3.0.0",
-    "pump": "3.0.0"
+    "gulp": "^4.0.2",
+    "gulp-sass": "^4.0.2",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-rename": "^2.0.0",
+    "del": "^5.1.0"
   }
 }
